# compresso-recsys

./: .buildinfo  .gitignore  README.md  examples.html  genindex.html  getting-started.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: environment.pickle  examples.doctree  getting-started.doctree  index.doctree  installation.doctree  quickstart.doctree
.doctrees/api/: checkpoint.doctree  compresso_recsys.doctree  datasets.doctree  index.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/compresso_recsys/: checkpoint.html
_modules/compresso_recsys/datasets/: amazon2023.html  base.html  goodbooks.html  movielens1m.html  movielens20m.html
_modules/compresso_recsys/scripts/: build_checkpoint.html
_sources/: examples.rst.txt  getting-started.rst.txt  installation.rst.txt  quickstart.rst.txt
api/: checkpoint.html  compresso_recsys.html  datasets.html  index.html
docs/: requirements.txt
docs/source/: conf.py  examples.rst  getting-started.rst  index.rst  quickstart.rst
docs/source/api/: checkpoint.rst  compresso_recsys.rst  datasets.rst  index.rst  models.rst  retrieval.rst
src/compresso_recsys/: __init__.py  checkpoint.py  data.py  retrieval.py
src/compresso_recsys/datasets/: __init__.py  amazon2023.py  base.py  goodbooks.py  movielens1m.py  movielens20m.py
tests/: test_amazon2023_dataset.py  test_build_checkpoint_api.py  test_checkpoint_cluster_graph.py  test_entity_text.py  test_public_api.py  test_sbert_texts.py  test_train_from_checkpoint_script.py
(+12 files in other folders)
